# postgres-mcp

./: .gitignore  README.md  SIMPLE_USAGE.md  index.js  package.json  postgres-mcp-server-1.0.0.tgz  pyproject.toml  template_mcp.json  test_connection.py  test_mcp.py
src/: __init__.py  main.py
src/utils/: config.py  db.py  types.py
